Remove http links.

--- a/_posts/2018-02-21-shad.md
+++ b/_posts/2018-02-21-shad.md
@@ -69,7 +69,7 @@ title: ШАД, Алгоритмы и структуры данных
 
 Я пересмотрел огромное количество лекций **ШАД** за разные годы, видео на **YouTube** из различных летних школ, зарубежных институтов (**Princeton**, **Massachusetts**, **Harvard**, etc.), и вот [этого замечательного парня](https://www.youtube.com/watch?v=TH9n_HVkjQM). В совокупности всё оказалось очень полезным.
 
-Для написание теории в **PDF** я выбрал приложение [Bear](http://www.bear-writer.com). Ограничений на формат не было, главное описать алгоритм, сложность и объяснить что он конечен и корректен. А в **Bear** просто приятно делать заметки.
+Для написание теории в **PDF** я выбрал приложение [Bear](https://bear.app). Ограничений на формат не было, главное описать алгоритм, сложность и объяснить что он конечен и корректен. А в **Bear** просто приятно делать заметки.
 
 {% include image.html url="/public/assets/imgs/posts/shad/bear.png" description="Отрывок теории в PDF" %}
 
